# EmbeddingLua

./: .gitignore  CMakeLists.txt  README.md  Report.docx  lua_tests.hpp  main.cpp
lua-5.4.4/: CMakeLists.txt
lua_files/: cpp_function_test.lua  object.lua  palindrome.lua  player.lua
results/: 100_palindrome_million
results/cppfunction/: 100000_cppfunction_1000
results/excel/: CPP_FunctionTest.xlsx  PalindromeTest.xlsx  playerTest.xlsx
results/palindrome/: 1000_palindrome_million  10_palindrome_million
results/player(object)/: 1000000_player_10  10000_player_10  1000_player_10  100_player_10  10_player_10
src/: lua_help.hpp  lua_tests.hpp
src/tests/: CPP_FunctionTest.hpp  Test.hpp  Timers.hpp
tests/: CPP_FunctionTest.hpp  ObjectTest.hpp  PalindromeTest.hpp  PlayerTest.hpp
